# VulkanLearn

./: .gitignore  CMakeLists.txt  README.md  VulkanLearnApplication.cpp  VulkanLearnApplication.h  VulkanUtils.cpp  VulkanUtils.h  main.cpp
.specstory/history/: 2025-12-16_14-47Z-build信息中文乱码.md  2025-12-16_16-12Z-main-cpp-代码跳转问题.md
doc/: Basic.md  MeshLoader.md
shaders/: shader.frag  shader.vert  vert.spv
src/mesh/: MeshAsset.h  ObjMeshLoader.cpp  ObjMeshLoader.h
src/vulkan/: VulkanCommands.cpp  VulkanCommands.h  VulkanCore.cpp  VulkanCore.h  VulkanLearnApplication.cpp  VulkanLearnApplication.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanResources.cpp  VulkanResources.h  VulkanSceneData.cpp  VulkanSceneData.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h
